# http_server/api/dto/user.go
@@ -1,12 +1,12 @@
 package dto
 
 type PostUserRegisterHandlerRequest struct {
-	Username string `json:"username"`
+	Login string `json:"login"`
 	Password string `json:"password"`
 }
 
 type PostUserLoginHandlerRequest struct {
-	Username string `json:"username"`
+	Login string `json:"login"`
 	Password string `json:"password"`
 }
 
