# http_server/docs/swagger.json
@@ -9,6 +9,59 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/task": {
+            "post": {
+                "description": "Create a new task with the specified key and value",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "task"
+                ],
+                "summary": "Create an task",
+                "parameters": [
+                    {
+                        "description": "task code and translator",
+                        "name": "translation_data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PostTaskHandlerRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token for authentication",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dto.PostTaskHandlerResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/task/result/{id}": {
             "get": {
                 "description": "Get a task result by its id",
@@ -42,25 +95,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "task"
+                            "$ref": "#/definitions/dto.GetTaskResultHandlerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     },
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     }
                 }
@@ -105,19 +158,19 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     },
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     }
                 }
@@ -154,13 +207,13 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     },
                     "404": {
                         "description": "Not found",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     }
                 }
@@ -194,13 +247,13 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     },
                     "409": {
                         "description": "Key already exists",
                         "schema": {
-                            "$ref": "#/definitions/httpx.HTTPError"
+                            "$ref": "#/definitions/dto.Error"
                         }
                     }
                 }
@@ -208,6 +261,22 @@
         }
     },
     "definitions": {
+        "dto.Error": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.GetTaskResultHandlerResponse": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.GetTaskStatusHandlerResponse": {
             "type": "object",
             "properties": {
@@ -216,13 +285,32 @@
                 }
             }
         },
+        "dto.PostTaskHandlerRequest": {
+            "type": "object",
+            "properties": {
+                "task_code": {
+                    "type": "string"
+                },
+                "task_translator": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PostTaskHandlerResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.PostUserLoginHandlerRequest": {
             "type": "object",
             "properties": {
-                "password": {
+                "login": {
                     "type": "string"
                 },
-                "username": {
+                "password": {
                     "type": "string"
                 }
             }
@@ -238,18 +326,10 @@
         "dto.PostUserRegisterHandlerRequest": {
             "type": "object",
             "properties": {
-                "password": {
+                "login": {
                     "type": "string"
                 },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "httpx.HTTPError": {
-            "type": "object",
-            "properties": {
-                "error": {
+                "password": {
                     "type": "string"
                 }
             }
