# http_server/usecases/service/user.go
@@ -1,56 +1,0 @@
-package service
-
-import (
-	"code_processor/http_server/models"
-	"code_processor/http_server/repository"
-
-	"github.com/google/uuid"
-	"golang.org/x/crypto/bcrypt"
-)
-
-type User struct {
-	userRepo    repository.User
-	sessionRepo repository.Session
-}
-
-func NewUser(userRepo repository.User, sessionRepo repository.Session) *User {
-	return &User{
-		userRepo:    userRepo,
-		sessionRepo: sessionRepo,
-	}
-}
-
-func (rs *User) Get(key uuid.UUID) (*models.User, error) {
-	user, err := rs.userRepo.GetById(key)
-	if err != nil {
-		return nil, err
-	}
-	return user, err
-}
-
-func (rs *User) PostRegister(user models.User) error {
-	hashedPassword, _ := bcrypt.GenerateFromPassword([]byte(user.Password), bcrypt.DefaultCost)
-	return rs.userRepo.Post(models.User{Id: user.Id, Login: user.Login, Password: string(hashedPassword)})
-}
-
-func (rs *User) PostLogin(login string, password string) (uuid.UUID, error) {
-	user, err := rs.userRepo.GetByLogin(login)
-	if err != nil {
-		return uuid.Nil, err
-	}
-
-	err = bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(password))
-	if err != nil {
-		return uuid.Nil, err
-	}
-	sessionId := uuid.New()
-	err = rs.sessionRepo.Set(models.Session{UserId: user.Id, SessionId: sessionId})
-	if err != nil {
-		return uuid.Nil, err
-	}
-	return sessionId, nil
-}
-
-func (rs *User) Delete(key uuid.UUID) error {
-	return rs.userRepo.Delete(key)
-}
